[package]
name = "abi-helper"
version = "0.1.0"
authors = ["Caleb Zulawski <caleb.zulawski@gmail.com>"]
description = "automatically generates ABI configuration files for linkers"

[dependencies]
clap = {version = "2.32", features = ["yaml", "suggestions", "color"]}
goblin = "0.0.19"
itertools = "0.7"
yaml-rust = "0.4"
custom_error = "1.3"
regex = "1"
